# core_perception

gnss_localizer/: CMakeLists.txt  package.xml
gnss_localizer/nodes/fix2tfpose/: fix2tfpose.cpp
lidar_apollo_cnn_seg_detect/: CMakeLists.txt
lidar_apollo_cnn_seg_detect/include/: cnn_segmentation.h  feature_generator.h
lidar_apollo_cnn_seg_detect/nodes/: cnn_segmentation.cpp  feature_generator.cpp
lidar_euclidean_cluster_detect/: CMakeLists.txt  package.xml
lidar_euclidean_cluster_detect/launch/: lidar_euclidean_cluster_detect.launch
lidar_euclidean_cluster_detect/nodes/lidar_euclidean_cluster_detect/: lidar_euclidean_cluster_detect.cpp
lidar_imm_ukf_pda_track/: CMakeLists.txt  package.xml
lidar_imm_ukf_pda_track/launch/: imm_ukf_pda_track.launch
lidar_imm_ukf_pda_track/nodes/imm_ukf_pda/: imm_ukf_pda.cpp  imm_ukf_pda_main.cpp
lidar_localizer/: CMakeLists.txt  package.xml
lidar_localizer/launch/: ndt_matching.launch
lidar_localizer/nodes/ndt_matching/: ndt_matching.cpp
lidar_point_pillars/: CMakeLists.txt
lidar_point_pillars/include/lidar_point_pillars/: anchor_mask_cuda.h  point_pillars.h
lidar_point_pillars/launch/: lidar_point_pillars.launch
lidar_point_pillars/nodes/: anchor_mask_cuda.cu  point_pillars.cpp  point_pillars_ros.cpp  preprocess_points.cpp  preprocess_points_cuda.cu
naive_motion_predict/: CMakeLists.txt  package.xml
naive_motion_predict/launch/: naive_motion_predict.launch
naive_motion_predict/nodes/naive_motion_predict/: naive_motion_predict.cpp  naive_motion_predict_node.cpp
points_downsampler/: CMakeLists.txt  package.xml
points_downsampler/nodes/voxel_grid_filter/: voxel_grid_filter.cpp
points_preprocessor/: CMakeLists.txt  package.xml
points_preprocessor/nodes/ray_ground_filter/: ray_ground_filter.cpp  ray_ground_filter_main.cpp
range_vision_fusion/: CMakeLists.txt  package.xml
range_vision_fusion/launch/: range_vision_fusion.launch
range_vision_fusion/src/: range_vision_fusion.cpp  range_vision_fusion_node.cpp
vision_darknet_detect/: CMakeLists.txt  package.xml
vision_darknet_detect/launch/: vision_yolo3_detect.launch
vision_darknet_detect/src/: vision_darknet_detect.cpp  vision_darknet_detect.h
vision_tkdnn_detect/: CHANGELOG.rst  CMakeLists.txt  interface.yaml  package.xml
vision_tkdnn_detect/include/: vision_tkdnn_detect.h
vision_tkdnn_detect/launch/: vision_tkdnn_detect.launch
vision_tkdnn_detect/src/: vision_tkdnn_detect.cpp  vision_tkdnn_detect_node.cpp
vision_trt_yolov3_detect/: CHANGELOG.rst  CMakeLists.txt  interface.yaml  package.xml
vision_trt_yolov3_detect/include/: buffers.h  vision_trt_yolov3_detect.h
vision_trt_yolov3_detect/launch/: vision_trt_yolo3_detect.launch
vision_trt_yolov3_detect/src/: vision_trt_yolov3_detect.cpp  vision_trt_yolov3_detect_node.cpp
