<?xml version="1.0"?>
<package format="2">
  <name>vision_trt_yolov3_detect</name>
  <version>1.14.0</version>
  <description>tensor rt image detector</description>
  <maintainer email="ahmet.soyyigit93@gmail.com">Ahmet Soyyigit</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_config_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
